Kubernetes/Network/globalnetworkpolicy-demo.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: namespaces-default
spec:
  order: 0.0
  namespaceSelector: name not in {"kube-system","kubernetes-dashboard","logs","monitoring"}
  types: ["Ingress", "Egress"]
  ingress:
  - action: Allow
    source:
      namespaceSelector: name in {"kube-system","kubernetes-dashboard","logs","monitoring"}
  egress:
  - action: Allow
