Kubernetes/Network/netpol-dev-demoapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demoapp-ingress
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: demoapp
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: name
          operator: In
          values: [dev, kube-system, logs, monitoring, kubernetes-dashboard]
    #- ipBlock:
    #    cidr: 192.168.0.0/16
  - from:
    - namespaceSelector:
        matchExpressions:
        - {key: name, operator: NotIn, values: ["default"]}
    ports:
    - protocol: TCP
      port: 80
